Disable install dir since its not working, dont want to confuse people Change default MaxPerm size Prevent freezing before downloading pack